[tool.poetry]
name = "SurEtBon - airflow and dbt setup"
version = "0.1.0"
description = "SurEtBon"
authors = ["A. Gourdol <a@g.ourdol>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.8.8"
dbt-bigquery = "^1.8.3"
apache-airflow = "*"
# psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"
PyYAML = "^6.0"
dockerfile = "^3.2.0"
pandas = "^1.4.2"
requests = "^2.28.1"
responses = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
markers = ["optional: not required, nor saved in test_output.txt"]
